<resources>
    <string name="app_name">Expense Management</string>
    <string name="bonhams">Bonhams</string>
    <string name="welcome">Welcome</string>
    <string name="please_login_to_continue">Please Login to continue</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="enter_value">Enter Value</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="forgot_password_heading">Please provide your registered email address below.\nWe will send you a reset password link.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="no_notification_found">No notifications found</string>
    <string name="submitted_on_colon">Submitted On :</string>
    <string name="approved">Approved</string>
    <string name="status_colon">Status :</string>
    <string name="total_amount_colon">Total Amount :</string>
    <string name="total_amount_claimed">Total Amount Claimed</string>
    <string name="total_mileage_claimed">Total Mileage Claimed</string>
    <string name="net_amount_colon">Net Amount :</string>
    <string name="claims">Claims</string>
    <string name="mileage_expenses">Mileage Expenses</string>
    <string name="please_enter_reson">Please enter reason</string>
    <string name="close">Close</string>
    <string name="reson_dis">The provided reason will be updated to the user</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="settings_colon">Settings :</string>
    <string name="change_password">Change Password</string>
    <string name="create_copy">Create Copy</string>
    <string name="edit_claim">Edit</string>
    <string name="create_copy_underline"><u>Create Copy</u></string>
    <string name="enter_your_email">Enter your email</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="done">DONE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="company_name">Company Name</string>
    <string name="department_name">Department Name</string>
    <string name="car_type">Car Type</string>
    <string name="mileage_rate">Mileage Rate</string>
    <string name="car_type_star">Car Type*</string>
    <string name="country">Country</string>
    <string name="mileage_type">Mileage Type</string>
    <string name="mileage_type_star">Mileage Type*</string>
    <string name="default_approver">Default Approver</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="reset">Reset</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="ledger_id">Ledger ID</string>
    <string name="milses_km">Mils/KM</string>
    <string name="expence_code">Expense Code</string>
    <string name="merchant_name_star">Merchant Name*</string>
    <string name="ledger_id_star">Ledger ID*</string>
    <string name="expense_group">Expense Group</string>
    <string name="expense_group_star">Expense Group*</string>
    <string name="expense_type">Expense Type</string>
    <string name="expense_type_star">Expense Type*</string>
    <string name="send_reminder"><font color='#8A3CAC'><u>Tap here to Send Reminder</u></font></string>
    <string name="company_number">Company Number</string>
    <string name="company_no">Company No :</string>
    <string name="department">Department</string>
    <string name="department_star">Department*</string>
    <string name="date_of_submission">Date of Submission</string>
    <string name="date_of_recipt">Date of Receipt</string>
    <string name="currency">Currency</string>
    <string name="currency_">Currency :</string>
    <string name="ledger_id_">Ledger ID :</string>
    <string name="currency_star">Currency*</string>
    <string name="total_amount">Total Amount</string>
    <string name="last_submit">Last Submitted On</string>
    <string name="group_name">Group Name</string>
    <string name="retake">RETAKE</string>
    <string name="finish">FINISH</string>
    <string name="claim_amount">Claim Amount : </string>
    <string name="claim_id">Claim ID : </string>
    <string name="expence_type">Expense  Type</string>
    <string name="merchant">Merchant</string>
    <string name="date_of_claim">Date of Claim : </string>
    <string name="amount">Amount</string>
    <string name="aution_value">Auction No</string>
    <string name="total_amount_star">Total Amount*</string>
    <string name="tax">Tax</string>
    <string name="tax_codes">Tax Code</string>
    <string name="tax_star">Applicable Tax*</string>
    <string name="tax_applicable">Applicable Tax</string>
    <string name="net_amount">Net Amount</string>
    <string name="split_amount">Split Amount</string>
    <string name="exp_code">Expense Code</string>
    <string name="auction_sales">Auction/Sales</string>
    <string name="auction_sales_exp">Auction/Sales Expense Code</string>
    <string name="reporting_manager_status">Reporting Manager Approval Status</string>
    <string name="rm_status">RM Approval Status</string>
    <string name="total_claimed_mileage">Total Claimed Mileage</string>
    <string name="finance_manager_status">Finance Manager Approval Status</string>
    <string name="f_manager_status">FM Approval Status</string>
    <string name="description">Description</string>
    <string name="attachments">Attachments</string>
    <string name="back">Back</string>
    <string name="n_a">N/A</string>
    <string name="good_to_see_you">Good to see you</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="type_here">Type here... </string>
    <string name="start">Start</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="scan_receipt">Scan Receipt</string>
    <string name="create_new_claim">Create New Claim</string>
    <string name="edit_claims">Edit Claim</string>
    <string name="edit_mileage">Edit Mileage </string>
    <string name="create_mileage_claim">Create Mileage Claim</string>
    <string name="start_gps">Start GPS</string>
    <string name="all_expense_request">All Expenses Request</string>
    <string name="claim_details">Claim Details</string>
    <string name="mileage_details">Mileage Details</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="password_reset">Password Reset</string>
    <string name="please_enter_your_new_password">Please enter your new password.</string>
    <string name="split">Split</string>
    <string name="view_split_details">View Split Details</string>
    <string name="splits">Splits:</string>
    <string name="upload_a_pic_underline"><u>Upload a picture</u></string>
    <string name="no_files_selected">No Files Selected</string>
    <string name="logout">Logout</string>
    <string name="validate_email">Please enter email</string>
    <string name="validate_password">Password should contains a letter, number and must be greater than 6 characters</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="force_logout">You\'re being log out due to inactivity. Please try again signed in or contact to admin.</string>
    <string name="validate_password_not_match">Confirm Password does not match new password</string>
    <string name="check_internet_msg">Please check your internet connection</string>
    <string name="trip_details_colon">Trip Details:</string>
    <string name="trip_default_colon">Default:</string>
    <string name="mileage_details_colon">Mileage Details:</string>
    <string name="round_trip">Round Trip</string>
    <string name="date_of_trip">Date Of Trip</string>
    <string name="date_of_trip_date_formate">DD-MM-YYYY</string>
    <string name="from">From</string>
    <string name="from_star">From*</string>
    <string name="to">To</string>
    <string name="to_star">To*</string>
    <string name="enter_end_location">Enter End Location</string>
    <string name="enter_starting_location">Enter Starting Location</string>
    <string name="distance">Distance</string>
    <string name="calculated_distance">Calculated Miles/KM</string>
    <string name="distance_star">Distance*</string>
    <string name="select_distance">Select Distance</string>
    <string name="claimed_miles">Claimed Miles</string>
    <string name="claculated_miles">Calculated Miles</string>
    <string name="claimed_miles_star">Claimed Miles*</string>
    <string name="miles_star">Miles*</string>
    <string name="calculated_miles_star">Calculated Miles*</string>
    <string name="mileage_rate_star">Mileage Rate*</string>
    <string name="claimed_miles_star2">Claimed Miles 2*</string>
    <string name="petrol_amount">Petrol Amount</string>
    <string name="park_amount">Parking Amount</string>
    <string name="date">Date</string>
    <string name="user_name">User Name</string>
    <string name="company">Company</string>
    <string name="company_star">Company*</string>
    <string name="expense">Expense</string>
    <string name="expense_star">Expense*</string>
    <string name="tax_code">Tax Code</string>
    <string name="tax_code_star">Tax Code*</string>
    <string name="login_successful">Login Successful</string>
    <string name="reset_your_pass_to_continue">Please reset your password to continue</string>
    <string name="upload_file">Upload File</string>
    <string name="take_photo">Take Photo</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="rejecte">Reject</string>
    <string name="search">Search</string>
    <string name="batch_edit">Batch Edit</string>
    <string name="batch_delete">Batch Delete</string>
    <string name="submit_batch">Submit Batch</string>
    <string name="approve_batch">Approve Batch</string>
    <string name="approve_reject">Reject Batch</string>
    <string name="submitted_on">Submitted On</string>
    <string name="no_result_found">No Data Available</string>
    <string name="split_expenses">Split Expenses</string>
    <string name="edit_split_expenses">Edit Split Expenses</string>
    <string name="split_expenses_details">Split Expense Details</string>
    <string name="original_expense">Original Expense</string>
    <string name="retry">Retry</string>
    <string name="please_select_expense_group">Please select expense group</string>
    <string name="please_select_expense_type">Please select expense type</string>
    <string name="please_select_department">Please select department</string>
    <string name="please_select_currency">Please select currency</string>
    <string name="please_enter_total_amount">Please enter total amount</string>
    <string name="please_enter_tax">Please enter tax</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="please_select_mileage_type">Please select mileage type</string>
    <string name="please_enter_merchant_name">Please enter merchant name</string>
</resources>