<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />


        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextBoldBlack28"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bonhams"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
            app:layout_constraintTop_toBottomOf="@id/guidelineTop" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVerticalRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

        <TextView
            android:id="@+id/mWelcomeMsg"
            style="@style/TextBoldBlack20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <TextView
            android:id="@+id/mLoginContinue"
            style="@style/TextRegularBlack10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/forgot_password_heading"
            app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/mWelcomeMsg" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mEmailTextField"
            style="@style/outlineBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_id"
            app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
            app:layout_constraintTop_toBottomOf="@+id/guidelineInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mPasswordTextField"
            style="@style/outlineBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/enter_password"
            app:endIconMode="password_toggle"
            app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
            app:layout_constraintTop_toBottomOf="@+id/mEmailTextField"
            android:visibility="invisible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/mRememberMeCheckbox"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_checkbox_uncheck_login"
            android:tag="0"
            app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/mPasswordTextField"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/mLabelRemember"
            style="@style/TextRegularBlack12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/remember_me"
            app:layout_constraintLeft_toRightOf="@id/mRememberMeCheckbox"
            app:layout_constraintTop_toBottomOf="@id/mPasswordTextField"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/mForgotPassword"
            style="@style/TextRegularBlack12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/forgot_password"
            app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
            app:layout_constraintTop_toBottomOf="@id/mPasswordTextField"
            android:visibility="invisible" />


        <LinearLayout
            android:id="@+id/mSubmitLay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_35sdp"
            app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
            app:layout_constraintTop_toBottomOf="@id/mRememberMeCheckbox">

            <ProgressBar
                android:id="@+id/mProgressBars"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/colorRed"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/mContinue"
                style="@style/TextRegularBlack12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_theme"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>